check for red days depending on consultant's location